--- a/Code/projects/mlb_analyzer/sandbox/players.ipynb
+++ b/Code/projects/mlb_analyzer/sandbox/players.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -49,8 +49,7 @@
       "Processing datatable3 from rotowire.com ...\n",
       "datatable3 table loaded successfully.\n",
       "Processing datatable4 from rotowire.com ...\n",
-      "datatable4 table loaded successfully.\n",
-      "Skipping datatable4: Table is empty.\n"
+      "datatable4 table loaded successfully.\n"
      ]
     }
    ],
@@ -60,7 +59,7 @@
     "def get_matchups(datatable_id):\n",
     "    # Load the options\n",
     "    options = Options()\n",
-    "    options.add_argument(\"--headless\")  # Optional: Run in headless mode\n",
+    "    #options.add_argument(\"--headless\")  # Optional: Run in headless mode\n",
     "    options.binary_location = \"C:\\\\Program Files\\\\BraveSoftware\\\\Brave-Browser\\\\Application\\\\brave.exe\"\n",
     "\n",
     "    # Set up the WebDriver\n",
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,15 +435,7 @@
     "last_seven_games     = clean_suffix(last_seven_games,     '_7')\n",
     "last_fifteen_games   = clean_suffix(last_fifteen_games,   '_15')\n",
     "last_thirty_games    = clean_suffix(last_thirty_games,    '_30')\n",
-    "season_to_date_games = clean_suffix(season_to_date_games, '_full')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "season_to_date_games = clean_suffix(season_to_date_games, '_full')\n",
     "\n",
     "# Keep the columns in the dataframes for yesterday_hitters\n",
     "columns_to_keep = ['PLAYER' # It is Name in the other dataframes \n",
@@ -632,40 +623,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Create unique combination of Name and Team\n",
-    "# unique_combination = main_df.drop_duplicates(subset=['Name', 'Team'])\n",
-    "\n",
-    "# # Keep only the columns Name and Team\n",
-    "# unique_combination = unique_combination[['Name', 'Team']]\n",
-    "\n",
-    "# # Drop the rows with NaN values\n",
-    "# unique_combination = unique_combination.dropna()\n",
-    "\n",
-    "# # Reset the index\n",
-    "# unique_combination = unique_combination.reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Find names with multiple occurrences\n",
-    "# name_counts = unique_combination['Name'].value_counts()\n",
-    "\n",
-    "# # Filter names that appear more than once\n",
-    "# repeated_names = name_counts[name_counts > 1].index.tolist()\n",
-    "\n",
-    "# print(\"Names appearing multiple times:\", repeated_names)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -674,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +782,7 @@
     "# Get the current working directory and create the path for the 'output' folder\n",
     "# output_folder = os.path.join(os.getcwd(), 'output')\n",
     "\n",
-    "output_folder = ('D:\\\\MLB Analyzer\\\\output\\\\')\n",
+    "output_folder = ('D:\\\\mlb_analyzer\\\\output\\\\players\\\\')\n",
     "\n",
     "# Save each DataFrame in the 'output' folder\n",
     "for name, dataframe in dfs.items():\n",
@@ -841,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
