Created the standings import for teams

--- a/Code/projects/mlb_analyzer/sandbox/teams.ipynb
+++ b/Code/projects/mlb_analyzer/sandbox/teams.ipynb
@@ -38,6 +38,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processing data for date: 2025-05-07\n",
+      "grid-noGutter mb-15 table loaded successfully.\n",
+      "Processing data for date: 2025-05-06\n",
+      "grid-noGutter mb-15 table loaded successfully.\n",
       "Processing data for date: 2025-05-05\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
       "Processing data for date: 2025-05-04\n",
@@ -47,10 +51,6 @@
       "Processing data for date: 2025-05-02\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
       "Processing data for date: 2025-05-01\n",
-      "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-04-30\n",
-      "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-04-29\n",
       "grid-noGutter mb-15 table loaded successfully.\n"
      ]
     }
@@ -978,30 +978,7 @@
      "output_type": "stream",
      "text": [
       "pitching data successfully retrieved for team 108\n",
-      "Skipping team 117 due to error: Message: \n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF7F4B3A145+76773]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B3A1A0+76864]\n",
-      "\t(No symbol) [0x00007FF7F48F8F7A]\n",
-      "\t(No symbol) [0x00007FF7F494F496]\n",
-      "\t(No symbol) [0x00007FF7F494F74C]\n",
-      "\t(No symbol) [0x00007FF7F49A2287]\n",
-      "\t(No symbol) [0x00007FF7F497739F]\n",
-      "\t(No symbol) [0x00007FF7F499F0CF]\n",
-      "\t(No symbol) [0x00007FF7F4977133]\n",
-      "\t(No symbol) [0x00007FF7F49404D1]\n",
-      "\t(No symbol) [0x00007FF7F4941263]\n",
-      "\tGetHandleVerifier [0x00007FF7F4DFA8ED+2962317]\n",
-      "\tGetHandleVerifier [0x00007FF7F4DF4EC2+2939234]\n",
-      "\tGetHandleVerifier [0x00007FF7F4E12FF3+3062419]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B54B9A+185914]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B5C78F+217647]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B42A44+111844]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B42BF2+112274]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B28A79+5401]\n",
-      "\tBaseThreadInitThunk [0x00007FFFA6BB7374+20]\n",
-      "\tRtlUserThreadStart [0x00007FFFA889CC91+33]\n",
-      "\n",
+      "pitching data successfully retrieved for team 117\n",
       "pitching data successfully retrieved for team 133\n",
       "pitching data successfully retrieved for team 141\n",
       "pitching data successfully retrieved for team 144\n",
@@ -1040,30 +1017,7 @@
       "hitting data successfully retrieved for team 158\n",
       "hitting data successfully retrieved for team 138\n",
       "hitting data successfully retrieved for team 112\n",
-      "Skipping team 109 due to error: Message: \n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF7F4B3A145+76773]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B3A1A0+76864]\n",
-      "\t(No symbol) [0x00007FF7F48F8F7A]\n",
-      "\t(No symbol) [0x00007FF7F494F496]\n",
-      "\t(No symbol) [0x00007FF7F494F74C]\n",
-      "\t(No symbol) [0x00007FF7F49A2287]\n",
-      "\t(No symbol) [0x00007FF7F497739F]\n",
-      "\t(No symbol) [0x00007FF7F499F0CF]\n",
-      "\t(No symbol) [0x00007FF7F4977133]\n",
-      "\t(No symbol) [0x00007FF7F49404D1]\n",
-      "\t(No symbol) [0x00007FF7F4941263]\n",
-      "\tGetHandleVerifier [0x00007FF7F4DFA8ED+2962317]\n",
-      "\tGetHandleVerifier [0x00007FF7F4DF4EC2+2939234]\n",
-      "\tGetHandleVerifier [0x00007FF7F4E12FF3+3062419]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B54B9A+185914]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B5C78F+217647]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B42A44+111844]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B42BF2+112274]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B28A79+5401]\n",
-      "\tBaseThreadInitThunk [0x00007FFFA6BB7374+20]\n",
-      "\tRtlUserThreadStart [0x00007FFFA889CC91+33]\n",
-      "\n",
+      "hitting data successfully retrieved for team 109\n",
       "hitting data successfully retrieved for team 119\n",
       "hitting data successfully retrieved for team 137\n",
       "hitting data successfully retrieved for team 114\n",
@@ -1119,34 +1073,34 @@
       "pitching gamelogs successfully retrieved for team 142\n",
       "pitching gamelogs successfully retrieved for team 145\n",
       "pitching gamelogs successfully retrieved for team 147\n",
-      "hitting gamelogs successfully retrieved for team 108\n",
-      "hitting gamelogs successfully retrieved for team 117\n",
-      "hitting gamelogs successfully retrieved for team 133\n",
-      "hitting gamelogs successfully retrieved for team 141\n",
-      "Skipping team 144 due to error: Message: \n",
+      "Skipping team 108 due to error: Message: \n",
       "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF7F4B3A145+76773]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B3A1A0+76864]\n",
-      "\t(No symbol) [0x00007FF7F48F8F7A]\n",
-      "\t(No symbol) [0x00007FF7F494F496]\n",
-      "\t(No symbol) [0x00007FF7F494F74C]\n",
-      "\t(No symbol) [0x00007FF7F49A2287]\n",
-      "\t(No symbol) [0x00007FF7F497739F]\n",
-      "\t(No symbol) [0x00007FF7F499F0CF]\n",
-      "\t(No symbol) [0x00007FF7F4977133]\n",
-      "\t(No symbol) [0x00007FF7F49404D1]\n",
-      "\t(No symbol) [0x00007FF7F4941263]\n",
-      "\tGetHandleVerifier [0x00007FF7F4DFA8ED+2962317]\n",
-      "\tGetHandleVerifier [0x00007FF7F4DF4EC2+2939234]\n",
-      "\tGetHandleVerifier [0x00007FF7F4E12FF3+3062419]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B54B9A+185914]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B5C78F+217647]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B42A44+111844]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B42BF2+112274]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B28A79+5401]\n",
+      "\tGetHandleVerifier [0x00007FF68294CF25+75717]\n",
+      "\tGetHandleVerifier [0x00007FF68294CF80+75808]\n",
+      "\t(No symbol) [0x00007FF682718F9A]\n",
+      "\t(No symbol) [0x00007FF68276F4C6]\n",
+      "\t(No symbol) [0x00007FF68276F77C]\n",
+      "\t(No symbol) [0x00007FF6827C2577]\n",
+      "\t(No symbol) [0x00007FF6827973BF]\n",
+      "\t(No symbol) [0x00007FF6827BF39C]\n",
+      "\t(No symbol) [0x00007FF682797153]\n",
+      "\t(No symbol) [0x00007FF682760421]\n",
+      "\t(No symbol) [0x00007FF6827611B3]\n",
+      "\tGetHandleVerifier [0x00007FF682C4D6FD+3223453]\n",
+      "\tGetHandleVerifier [0x00007FF682C47CA2+3200322]\n",
+      "\tGetHandleVerifier [0x00007FF682C65AD3+3322739]\n",
+      "\tGetHandleVerifier [0x00007FF6829669FA+180890]\n",
+      "\tGetHandleVerifier [0x00007FF68296E0FF+211359]\n",
+      "\tGetHandleVerifier [0x00007FF682955274+109332]\n",
+      "\tGetHandleVerifier [0x00007FF682955422+109762]\n",
+      "\tGetHandleVerifier [0x00007FF68293BA39+4825]\n",
       "\tBaseThreadInitThunk [0x00007FFFA6BB7374+20]\n",
       "\tRtlUserThreadStart [0x00007FFFA889CC91+33]\n",
       "\n",
+      "hitting gamelogs successfully retrieved for team 117\n",
+      "hitting gamelogs successfully retrieved for team 133\n",
+      "hitting gamelogs successfully retrieved for team 141\n",
+      "hitting gamelogs successfully retrieved for team 144\n",
       "hitting gamelogs successfully retrieved for team 158\n",
       "hitting gamelogs successfully retrieved for team 138\n",
       "hitting gamelogs successfully retrieved for team 112\n",
@@ -1158,63 +1112,40 @@
       "hitting gamelogs successfully retrieved for team 114\n",
       "hitting gamelogs successfully retrieved for team 136\n",
       "hitting gamelogs successfully retrieved for team 146\n",
-      "Skipping team 121 due to error: Message: \n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF7F4B3A145+76773]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B3A1A0+76864]\n",
-      "\t(No symbol) [0x00007FF7F48F8F7A]\n",
-      "\t(No symbol) [0x00007FF7F494F496]\n",
-      "\t(No symbol) [0x00007FF7F494F74C]\n",
-      "\t(No symbol) [0x00007FF7F49A2287]\n",
-      "\t(No symbol) [0x00007FF7F497739F]\n",
-      "\t(No symbol) [0x00007FF7F499F0CF]\n",
-      "\t(No symbol) [0x00007FF7F4977133]\n",
-      "\t(No symbol) [0x00007FF7F49404D1]\n",
-      "\t(No symbol) [0x00007FF7F4941263]\n",
-      "\tGetHandleVerifier [0x00007FF7F4DFA8ED+2962317]\n",
-      "\tGetHandleVerifier [0x00007FF7F4DF4EC2+2939234]\n",
-      "\tGetHandleVerifier [0x00007FF7F4E12FF3+3062419]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B54B9A+185914]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B5C78F+217647]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B42A44+111844]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B42BF2+112274]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B28A79+5401]\n",
-      "\tBaseThreadInitThunk [0x00007FFFA6BB7374+20]\n",
-      "\tRtlUserThreadStart [0x00007FFFA889CC91+33]\n",
-      "\n",
+      "hitting gamelogs successfully retrieved for team 121\n",
       "hitting gamelogs successfully retrieved for team 120\n",
       "hitting gamelogs successfully retrieved for team 110\n",
       "hitting gamelogs successfully retrieved for team 135\n",
       "hitting gamelogs successfully retrieved for team 143\n",
       "hitting gamelogs successfully retrieved for team 134\n",
       "hitting gamelogs successfully retrieved for team 140\n",
-      "Skipping team 139 due to error: Message: \n",
+      "hitting gamelogs successfully retrieved for team 139\n",
+      "hitting gamelogs successfully retrieved for team 113\n",
+      "hitting gamelogs successfully retrieved for team 111\n",
+      "Skipping team 115 due to error: Message: \n",
       "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF7F4B3A145+76773]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B3A1A0+76864]\n",
-      "\t(No symbol) [0x00007FF7F48F8F7A]\n",
-      "\t(No symbol) [0x00007FF7F494F496]\n",
-      "\t(No symbol) [0x00007FF7F494F74C]\n",
-      "\t(No symbol) [0x00007FF7F49A2287]\n",
-      "\t(No symbol) [0x00007FF7F497739F]\n",
-      "\t(No symbol) [0x00007FF7F499F0CF]\n",
-      "\t(No symbol) [0x00007FF7F4977133]\n",
-      "\t(No symbol) [0x00007FF7F49404D1]\n",
-      "\t(No symbol) [0x00007FF7F4941263]\n",
-      "\tGetHandleVerifier [0x00007FF7F4DFA8ED+2962317]\n",
-      "\tGetHandleVerifier [0x00007FF7F4DF4EC2+2939234]\n",
-      "\tGetHandleVerifier [0x00007FF7F4E12FF3+3062419]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B54B9A+185914]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B5C78F+217647]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B42A44+111844]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B42BF2+112274]\n",
-      "\tGetHandleVerifier [0x00007FF7F4B28A79+5401]\n",
+      "\tGetHandleVerifier [0x00007FF68294CF25+75717]\n",
+      "\tGetHandleVerifier [0x00007FF68294CF80+75808]\n",
+      "\t(No symbol) [0x00007FF682718F9A]\n",
+      "\t(No symbol) [0x00007FF68276F4C6]\n",
+      "\t(No symbol) [0x00007FF68276F77C]\n",
+      "\t(No symbol) [0x00007FF6827C2577]\n",
+      "\t(No symbol) [0x00007FF6827973BF]\n",
+      "\t(No symbol) [0x00007FF6827BF39C]\n",
+      "\t(No symbol) [0x00007FF682797153]\n",
+      "\t(No symbol) [0x00007FF682760421]\n",
+      "\t(No symbol) [0x00007FF6827611B3]\n",
+      "\tGetHandleVerifier [0x00007FF682C4D6FD+3223453]\n",
+      "\tGetHandleVerifier [0x00007FF682C47CA2+3200322]\n",
+      "\tGetHandleVerifier [0x00007FF682C65AD3+3322739]\n",
+      "\tGetHandleVerifier [0x00007FF6829669FA+180890]\n",
+      "\tGetHandleVerifier [0x00007FF68296E0FF+211359]\n",
+      "\tGetHandleVerifier [0x00007FF682955274+109332]\n",
+      "\tGetHandleVerifier [0x00007FF682955422+109762]\n",
+      "\tGetHandleVerifier [0x00007FF68293BA39+4825]\n",
       "\tBaseThreadInitThunk [0x00007FFFA6BB7374+20]\n",
       "\tRtlUserThreadStart [0x00007FFFA889CC91+33]\n",
       "\n",
-      "hitting gamelogs successfully retrieved for team 113\n",
-      "hitting gamelogs successfully retrieved for team 111\n",
-      "hitting gamelogs successfully retrieved for team 115\n",
       "hitting gamelogs successfully retrieved for team 118\n",
       "hitting gamelogs successfully retrieved for team 116\n",
       "hitting gamelogs successfully retrieved for team 142\n",
@@ -1772,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "eba80d8a",
    "metadata": {},
    "outputs": [
@@ -2078,6 +2009,114 @@
     "# For Splits\n",
     "for name, dataframe in dic_splits.items():\n",
     "    dataframe.to_csv(os.path.join(output_folder_splits, f'{name}.csv'), index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9536476f",
+   "metadata": {},
+   "source": [
+    "### Import Standings\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5f1798cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "expanded_standings_overall table loaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def import_standings():\n",
+    "    # Load the options\n",
+    "    options = Options()\n",
+    "    options.add_argument(\"--headless\")  # Optional: Run in headless mode\n",
+    "    options.binary_location = \"C:\\\\Program Files\\\\BraveSoftware\\\\Brave-Browser\\\\Application\\\\brave.exe\"\n",
+    "\n",
+    "    # Set up the WebDriver\n",
+    "    driver = webdriver.Chrome(options= options)    \n",
+    "    driver.get(f\"https://www.baseball-reference.com/leagues/MLB-standings.shtml\")\n",
+    "\n",
+    "    datatable_id = 'expanded_standings_overall'\n",
+    "\n",
+    "    # Explicitly wait for the table element to load\n",
+    "    datatable_xpath = f\"//table[@id='{datatable_id}']\"  # Update XPATH as needed\n",
+    "    try:\n",
+    "        WebDriverWait(driver, 60).until(\n",
+    "            EC.presence_of_element_located((By.XPATH, datatable_xpath))\n",
+    "        )\n",
+    "        print(f\"{datatable_id} table loaded successfully.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: Table {datatable_id} did not load. Details: {e}\")\n",
+    "        driver.quit()\n",
+    "\n",
+    "    # Wait for the load of the page\n",
+    "    time.sleep(10)\n",
+    "\n",
+    "    # Locate the table\n",
+    "    table_element = driver.find_element(By.XPATH, datatable_xpath)\n",
+    "    text_content = table_element.text\n",
+    "\n",
+    "    # Process the table content\n",
+    "    rows = text_content.split(\"\\n\")\n",
+    "    table_data = [row.split(\"\\t\") for row in rows]\n",
+    "\n",
+    "    # Convert to dataframe\n",
+    "    df = pd.DataFrame(table_data)\n",
+    "    \n",
+    "    # Close the WebDriver\n",
+    "    driver.quit()\n",
+    "    \n",
+    "    #? Clean the extraction\n",
+    "    # Remove last row\n",
+    "    df = df.iloc[:-1]\n",
+    "\n",
+    "    # Split column from right using spaces\n",
+    "    df = df[0].str.rsplit(\" \", n= 27, expand=True)\n",
+    "\n",
+    "    # Use regex to separate the leading number from the team name\n",
+    "    df[['Number', 'Team_Name']] = df[0].str.extract(r'(\\d+)\\s(.+)')\n",
+    "\n",
+    "    # Remove the first column\n",
+    "    df = df.iloc[:, 1:]\n",
+    "\n",
+    "    # Remove rows where column '0 contains 'Rk', but keep the first row\n",
+    "    df = df[~((df.index > 0) & (df[1].str.contains('Tm', na=False)))]\n",
+    "\n",
+    "    # Set first row as header\n",
+    "    df.columns = df.iloc[0]  # Assign first row as column names\n",
+    "    df = df[1:].reset_index(drop=True)  # Remove first row and reset index\n",
+    "\n",
+    "    # New column names\n",
+    "    new_column_names = ['W', 'L', 'W-L%', 'StrkWL', 'StrkNb', 'R', 'RA', 'Rdiff', 'SOS', 'SRS', 'pythWL', 'Luck',\n",
+    "                        'vEast', 'vCent', 'vWest', 'Inter', 'Home', 'Road', 'ExInn', '1Run', 'vRHP', 'vLHP', '≥.500',\n",
+    "                        '<.500', 'last10', 'last20', 'last30', 'Rk', 'Team']\n",
+    "\n",
+    "    # Rename all columns\n",
+    "    df.columns = new_column_names\n",
+    "\n",
+    "    # Drop the column named 'Rk'\n",
+    "    df = df.drop(columns=['Rk'])\n",
+    "\n",
+    "    # Step 2: Move the last column to the first position\n",
+    "    cols = df.columns.tolist()\n",
+    "    df = df[[cols[-1]] + cols[:-1]]\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "# Call the function\n",
+    "standings_df = import_standings()\n",
+    "\n",
+    "# Export the table\n",
+    "output_folder_teams  = ('D:\\\\mlb_analyzer\\\\output\\\\teams\\\\')\n",
+    "standings_df.to_csv(os.path.join(output_folder_teams, 'standings.csv'), index=False)\n"
    ]
   }
  ],
