Imported Standings and fixed issue with possible duplicated from stats websites

--- a/Code/projects/mlb_analyzer/sandbox/teams.ipynb
+++ b/Code/projects/mlb_analyzer/sandbox/teams.ipynb
@@ -38,6 +38,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processing data for date: 2025-05-08\n",
+      "grid-noGutter mb-15 table loaded successfully.\n",
       "Processing data for date: 2025-05-07\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
       "Processing data for date: 2025-05-06\n",
@@ -49,8 +51,6 @@
       "Processing data for date: 2025-05-03\n",
       "grid-noGutter mb-15 table loaded successfully.\n",
       "Processing data for date: 2025-05-02\n",
-      "grid-noGutter mb-15 table loaded successfully.\n",
-      "Processing data for date: 2025-05-01\n",
       "grid-noGutter mb-15 table loaded successfully.\n"
      ]
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "76b1deac",
    "metadata": {},
    "outputs": [
@@ -985,7 +985,30 @@
       "pitching data successfully retrieved for team 158\n",
       "pitching data successfully retrieved for team 138\n",
       "pitching data successfully retrieved for team 112\n",
-      "pitching data successfully retrieved for team 109\n",
+      "Skipping team 109 due to error: Message: \n",
+      "Stacktrace:\n",
+      "\tGetHandleVerifier [0x00007FF7A9EFCF25+75717]\n",
+      "\tGetHandleVerifier [0x00007FF7A9EFCF80+75808]\n",
+      "\t(No symbol) [0x00007FF7A9CC8F9A]\n",
+      "\t(No symbol) [0x00007FF7A9D1F4C6]\n",
+      "\t(No symbol) [0x00007FF7A9D1F77C]\n",
+      "\t(No symbol) [0x00007FF7A9D72577]\n",
+      "\t(No symbol) [0x00007FF7A9D473BF]\n",
+      "\t(No symbol) [0x00007FF7A9D6F39C]\n",
+      "\t(No symbol) [0x00007FF7A9D47153]\n",
+      "\t(No symbol) [0x00007FF7A9D10421]\n",
+      "\t(No symbol) [0x00007FF7A9D111B3]\n",
+      "\tGetHandleVerifier [0x00007FF7AA1FD6FD+3223453]\n",
+      "\tGetHandleVerifier [0x00007FF7AA1F7CA2+3200322]\n",
+      "\tGetHandleVerifier [0x00007FF7AA215AD3+3322739]\n",
+      "\tGetHandleVerifier [0x00007FF7A9F169FA+180890]\n",
+      "\tGetHandleVerifier [0x00007FF7A9F1E0FF+211359]\n",
+      "\tGetHandleVerifier [0x00007FF7A9F05274+109332]\n",
+      "\tGetHandleVerifier [0x00007FF7A9F05422+109762]\n",
+      "\tGetHandleVerifier [0x00007FF7A9EEBA39+4825]\n",
+      "\tBaseThreadInitThunk [0x00007FFFA6BB7374+20]\n",
+      "\tRtlUserThreadStart [0x00007FFFA889CC91+33]\n",
+      "\n",
       "pitching data successfully retrieved for team 119\n",
       "pitching data successfully retrieved for team 137\n",
       "pitching data successfully retrieved for team 114\n",
@@ -1073,30 +1096,7 @@
       "pitching gamelogs successfully retrieved for team 142\n",
       "pitching gamelogs successfully retrieved for team 145\n",
       "pitching gamelogs successfully retrieved for team 147\n",
-      "Skipping team 108 due to error: Message: \n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF68294CF25+75717]\n",
-      "\tGetHandleVerifier [0x00007FF68294CF80+75808]\n",
-      "\t(No symbol) [0x00007FF682718F9A]\n",
-      "\t(No symbol) [0x00007FF68276F4C6]\n",
-      "\t(No symbol) [0x00007FF68276F77C]\n",
-      "\t(No symbol) [0x00007FF6827C2577]\n",
-      "\t(No symbol) [0x00007FF6827973BF]\n",
-      "\t(No symbol) [0x00007FF6827BF39C]\n",
-      "\t(No symbol) [0x00007FF682797153]\n",
-      "\t(No symbol) [0x00007FF682760421]\n",
-      "\t(No symbol) [0x00007FF6827611B3]\n",
-      "\tGetHandleVerifier [0x00007FF682C4D6FD+3223453]\n",
-      "\tGetHandleVerifier [0x00007FF682C47CA2+3200322]\n",
-      "\tGetHandleVerifier [0x00007FF682C65AD3+3322739]\n",
-      "\tGetHandleVerifier [0x00007FF6829669FA+180890]\n",
-      "\tGetHandleVerifier [0x00007FF68296E0FF+211359]\n",
-      "\tGetHandleVerifier [0x00007FF682955274+109332]\n",
-      "\tGetHandleVerifier [0x00007FF682955422+109762]\n",
-      "\tGetHandleVerifier [0x00007FF68293BA39+4825]\n",
-      "\tBaseThreadInitThunk [0x00007FFFA6BB7374+20]\n",
-      "\tRtlUserThreadStart [0x00007FFFA889CC91+33]\n",
-      "\n",
+      "hitting gamelogs successfully retrieved for team 108\n",
       "hitting gamelogs successfully retrieved for team 117\n",
       "hitting gamelogs successfully retrieved for team 133\n",
       "hitting gamelogs successfully retrieved for team 141\n",
@@ -1122,30 +1122,7 @@
       "hitting gamelogs successfully retrieved for team 139\n",
       "hitting gamelogs successfully retrieved for team 113\n",
       "hitting gamelogs successfully retrieved for team 111\n",
-      "Skipping team 115 due to error: Message: \n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF68294CF25+75717]\n",
-      "\tGetHandleVerifier [0x00007FF68294CF80+75808]\n",
-      "\t(No symbol) [0x00007FF682718F9A]\n",
-      "\t(No symbol) [0x00007FF68276F4C6]\n",
-      "\t(No symbol) [0x00007FF68276F77C]\n",
-      "\t(No symbol) [0x00007FF6827C2577]\n",
-      "\t(No symbol) [0x00007FF6827973BF]\n",
-      "\t(No symbol) [0x00007FF6827BF39C]\n",
-      "\t(No symbol) [0x00007FF682797153]\n",
-      "\t(No symbol) [0x00007FF682760421]\n",
-      "\t(No symbol) [0x00007FF6827611B3]\n",
-      "\tGetHandleVerifier [0x00007FF682C4D6FD+3223453]\n",
-      "\tGetHandleVerifier [0x00007FF682C47CA2+3200322]\n",
-      "\tGetHandleVerifier [0x00007FF682C65AD3+3322739]\n",
-      "\tGetHandleVerifier [0x00007FF6829669FA+180890]\n",
-      "\tGetHandleVerifier [0x00007FF68296E0FF+211359]\n",
-      "\tGetHandleVerifier [0x00007FF682955274+109332]\n",
-      "\tGetHandleVerifier [0x00007FF682955422+109762]\n",
-      "\tGetHandleVerifier [0x00007FF68293BA39+4825]\n",
-      "\tBaseThreadInitThunk [0x00007FFFA6BB7374+20]\n",
-      "\tRtlUserThreadStart [0x00007FFFA889CC91+33]\n",
-      "\n",
+      "hitting gamelogs successfully retrieved for team 115\n",
       "hitting gamelogs successfully retrieved for team 118\n",
       "hitting gamelogs successfully retrieved for team 116\n",
       "hitting gamelogs successfully retrieved for team 142\n",
@@ -1195,7 +1172,7 @@
     "            table_data = [row.split(\"\\t\") for row in rows]\n",
     "\n",
     "            team_data[team_id] = pd.DataFrame(table_data)\n",
-    "            \n",
+    "\n",
     "            # Print the status of the data retrieval\n",
     "            if category == \"statcast\":\n",
     "                print(f\"{analysis_type} data successfully retrieved for team {team_id}\")\n",
@@ -1207,6 +1184,7 @@
     "            continue  # Skip to the next iteration\n",
     "        \n",
     "    driver.quit()\n",
+    "    \n",
     "    return team_data\n",
     "\n",
     "# Import the tables for each team\n",
@@ -1225,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "c37ce2ce",
    "metadata": {},
    "outputs": [],
@@ -1416,12 +1394,31 @@
     "    # Add the headers to the dataframe\n",
     "    batted_ball_profile.columns = headers_batted_ball_profile.columns\n",
     "    \n",
-    "    return statcast, plate_discipline, batted_ball_profile\n"
+    "    \n",
+    "    def remove_duplicates(df):\n",
+    "        \"\"\"\n",
+    "        Removes duplicate rows from a given DataFrame.\n",
+    "\n",
+    "        Args:\n",
+    "            df (pd.DataFrame): The DataFrame to process.\n",
+    "\n",
+    "        Returns:\n",
+    "            pd.DataFrame: A new DataFrame without duplicate rows.\n",
+    "        \"\"\"\n",
+    "        return df.drop_duplicates()\n",
+    "    \n",
+    "    \n",
+    "    # Remove duplicated rows from the dataframes\n",
+    "    statcast_cleaned            = remove_duplicates(statcast)    \n",
+    "    plate_discipline_cleaned    = remove_duplicates(plate_discipline)    \n",
+    "    batted_ball_profile_cleaned = remove_duplicates(batted_ball_profile)    \n",
+    "    \n",
+    "    return statcast_cleaned, plate_discipline_cleaned, batted_ball_profile_cleaned\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "c50a2fa6",
    "metadata": {},
    "outputs": [],
@@ -1493,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "id": "a001f3e9",
    "metadata": {},
    "outputs": [],
@@ -1530,7 +1527,16 @@
     "    statcast_data_hitting[team_id]            = statcast\n",
     "    plate_discipline_data_hitting[team_id]    = plate_discipline\n",
     "    batted_ball_profile_data_hitting[team_id] = batted_ball_profile\n",
-    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "5ce2bd8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "#! GAMELOGS\n",
     "# Initialize dictionaries to store the results for each team\n",
@@ -1558,42 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5a2623dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def create_parquet_files(data_dict, suffix):\n",
-    "#     \"\"\"Create Parquet files from a dictionary of DataFrames.\"\"\"\n",
-    "\n",
-    "#     # Create new DataFrames with a suffix\n",
-    "#     df_store = {}\n",
-    "\n",
-    "#     for idx, (key, df) in enumerate(data_dict.items(), start= 1):\n",
-    "#         new_name = f\"{key}{suffix}\"  # Assigning a numbered suffix\n",
-    "#         df_store[new_name] = df.copy()  # Storing the DataFrame in a dictionary\n",
-    "    \n",
-    "#     for name, df in df_store.items():\n",
-    "#         # Save hitting statcast DataFrames\n",
-    "#         df.to_parquet(f\"D:\\\\mlb_analyzer\\\\output\\\\teams\\\\{suffix}\\\\{name}.parquet\")\n",
-    "\n",
-    "\n",
-    "# # Call the function and export the DataFrames to Parquet files\n",
-    "# create_parquet_files(statcast_data_hitting, \"_hitting_statcast\")\n",
-    "# create_parquet_files(plate_discipline_data_hitting, \"_hitting_plate_discipline\")\n",
-    "# create_parquet_files(batted_ball_profile_data_hitting, \"_hitting_batted_ball_profile\")\n",
-    "\n",
-    "# create_parquet_files(statcast_data_pitching, \"_pitching_statcast\")\n",
-    "# create_parquet_files(plate_discipline_data_pitching, \"_pitching_plate_discipline\")\n",
-    "# create_parquet_files(batted_ball_profile_data_pitching, \"_pitching_batted_ball_profile\")\n",
-    "\n",
-    "# create_parquet_files(gamelog_hitting, \"_gamelogs_hitting\")\n",
-    "# create_parquet_files(gamelog_pitching, \"_gamelogs_pitching\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "22d58658",
    "metadata": {},
    "outputs": [],
@@ -1652,7 +1623,16 @@
     "batted_ball_profile_pitching_df = merge_dataframes(batted_ball_profile_data_pitching)\n",
     "\n",
     "gamelog_hitting_df = merge_dataframes(gamelog_hitting)\n",
-    "gamelog_pitching_df = merge_dataframes(gamelog_pitching)\n",
+    "gamelog_pitching_df = merge_dataframes(gamelog_pitching)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "a523f018",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Create a column with type of analysis\n",
     "statcast_hitting_df['type']  = 'hitting'\n",
@@ -1703,61 +1683,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "eba80d8a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "split1 (LHP) table loaded successfully.\n",
-      "split1 (RHP) table loaded successfully.\n",
-      "split1 (LH) table loaded successfully.\n",
-      "split1 (RH) table loaded successfully.\n",
-      "split1 (7) table loaded successfully.\n",
-      "split1 (14) table loaded successfully.\n",
-      "split1 (28) table loaded successfully.\n",
-      "split1 (Home) table loaded successfully.\n",
-      "split1 (Away) table loaded successfully.\n",
-      "split1 (first_batter_game) table loaded successfully.\n",
-      "split1 (vs_power_pitcher) table loaded successfully.\n",
-      "split1 (vs_weak_pitcher) table loaded successfully.\n",
-      "split1 (vs_greater_or_equal_than_500_WP) table loaded successfully.\n",
-      "split1 (vs_less_than_500_WP) table loaded successfully.\n",
-      "split1 (ANA) table loaded successfully.\n",
-      "split1 (ARI) table loaded successfully.\n",
-      "split1 (ATL) table loaded successfully.\n",
-      "split1 (BAL) table loaded successfully.\n",
-      "split1 (BOS) table loaded successfully.\n",
-      "split1 (CHC) table loaded successfully.\n",
-      "split1 (CHW) table loaded successfully.\n",
-      "split1 (CIN) table loaded successfully.\n",
-      "split1 (CLE) table loaded successfully.\n",
-      "split1 (COL) table loaded successfully.\n",
-      "split1 (DET) table loaded successfully.\n",
-      "split1 (HOU) table loaded successfully.\n",
-      "split1 (KCR) table loaded successfully.\n",
-      "split1 (LAD) table loaded successfully.\n",
-      "split1 (FLA) table loaded successfully.\n",
-      "split1 (MIL) table loaded successfully.\n",
-      "split1 (MIN) table loaded successfully.\n",
-      "split1 (NYM) table loaded successfully.\n",
-      "split1 (NYY) table loaded successfully.\n",
-      "split1 (OAK) table loaded successfully.\n",
-      "split1 (PHI) table loaded successfully.\n",
-      "split1 (PIT) table loaded successfully.\n",
-      "split1 (SDP) table loaded successfully.\n",
-      "split1 (SEA) table loaded successfully.\n",
-      "split1 (SFG) table loaded successfully.\n",
-      "split1 (STL) table loaded successfully.\n",
-      "split1 (TBD) table loaded successfully.\n",
-      "split1 (TEX) table loaded successfully.\n",
-      "split1 (TOR) table loaded successfully.\n",
-      "split1 (WSN) table loaded successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def teams_split(split_type, clean_mode):\n",
     "    # Load the options\n",
@@ -1999,8 +1928,9 @@
     "# Get the current working directory and create the path for the 'output' folder\n",
     "# output_folder = os.path.join(os.getcwd(), 'output')\n",
     "\n",
-    "output_folder_teams  = ('D:\\\\mlb_analyzer\\\\output\\\\teams\\\\direct_matches\\\\')\n",
-    "output_folder_splits = ('D:\\\\mlb_analyzer\\\\output\\\\teams\\\\splits\\\\')\n",
+    "output_folder_teams           = ('D:\\\\mlb_analyzer\\\\output\\\\teams\\\\direct_matches\\\\')\n",
+    "output_folder_splits          = ('D:\\\\mlb_analyzer\\\\output\\\\teams\\\\splits\\\\')\n",
+    "output_folder_individual_team = ('D:\\\\mlb_analyzer\\\\output\\\\teams\\\\team\\\\')\n",
     "\n",
     "# Save each DataFrame in the 'output' folder\n",
     "# For direct matches\n",
@@ -2008,7 +1938,11 @@
     "\n",
     "# For Splits\n",
     "for name, dataframe in dic_splits.items():\n",
-    "    dataframe.to_csv(os.path.join(output_folder_splits, f'{name}.csv'), index=False)\n"
+    "    dataframe.to_csv(os.path.join(output_folder_splits, f'{name}.csv'), index=False)\n",
+    "    \n",
+    "# For Teams\n",
+    "for name, dataframe in dic_team.items():\n",
+    "    dataframe.to_csv(os.path.join(output_folder_individual_team, f'{name}.csv'), index=False)\n"
    ]
   },
   {
@@ -2021,18 +1955,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "5f1798cc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "expanded_standings_overall table loaded successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def import_standings():\n",
     "    # Load the options\n",
@@ -2117,6 +2043,14 @@
     "# Export the table\n",
     "output_folder_teams  = ('D:\\\\mlb_analyzer\\\\output\\\\teams\\\\')\n",
     "standings_df.to_csv(os.path.join(output_folder_teams, 'standings.csv'), index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0001f869",
+   "metadata": {},
+   "source": [
+    "### Import Odds"
    ]
   }
  ],
